// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store basic tests destroys 1`] = `
Object {
  "_actionSerializers": Object {},
  "_currentRunId": 0,
  "_destroyController": Any<AbortController>,
  "_destroyed": true,
  "_disableSideEffects": false,
  "_dispatchAction": [Function],
  "_infiniteErrors": Object {
    "count": 0,
    "lastSeen": 0,
  },
  "_lastSeenStateCache": WeakMap {},
  "_onError": undefined,
  "_scheduler": undefined,
  "_sideEffects": Array [],
  "_state": AppState {
    "config": AppStateConfig {
      "fields": Array [
        FieldDesc {
          "apply": [Function],
          "init": [Function],
          "name": "one$",
        },
        FieldDesc {
          "apply": [Function],
          "init": [Function],
          "name": "two$",
        },
      ],
      "opts": undefined,
      "slices": Array [
        Slice {
          "key": "one$",
          "spec": Object {
            "key": SliceKey {
              "key": "one$",
              "name": "one",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
        Slice {
          "key": "two$",
          "spec": Object {
            "key": SliceKey {
              "key": "two$",
              "name": "two",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
      ],
      "slicesByKey": Object {
        "one$": Slice {
          "key": "one$",
          "spec": Object {
            "key": SliceKey {
              "key": "one$",
              "name": "one",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
        "two$": Slice {
          "key": "two$",
          "spec": Object {
            "key": SliceKey {
              "key": "two$",
              "name": "two",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
      },
    },
    "slicesCurrentState": Object {
      "one$": 1,
      "two$": 2,
    },
  },
  "dispatch": [Function],
  "errorHandler": [Function],
  "storeName": "test-store",
}
`;

exports[`store basic tests sets up properly 1`] = `
Object {
  "_actionSerializers": Object {},
  "_currentRunId": 0,
  "_destroyController": Any<AbortController>,
  "_destroyed": false,
  "_disableSideEffects": false,
  "_dispatchAction": [Function],
  "_infiniteErrors": Object {
    "count": 0,
    "lastSeen": 0,
  },
  "_lastSeenStateCache": WeakMap {},
  "_onError": undefined,
  "_scheduler": undefined,
  "_sideEffects": Array [],
  "_state": AppState {
    "config": AppStateConfig {
      "fields": Array [
        FieldDesc {
          "apply": [Function],
          "init": [Function],
          "name": "one$",
        },
        FieldDesc {
          "apply": [Function],
          "init": [Function],
          "name": "two$",
        },
      ],
      "opts": undefined,
      "slices": Array [
        Slice {
          "key": "one$",
          "spec": Object {
            "key": SliceKey {
              "key": "one$",
              "name": "one",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
        Slice {
          "key": "two$",
          "spec": Object {
            "key": SliceKey {
              "key": "two$",
              "name": "two",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
      ],
      "slicesByKey": Object {
        "one$": Slice {
          "key": "one$",
          "spec": Object {
            "key": SliceKey {
              "key": "one$",
              "name": "one",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
        "two$": Slice {
          "key": "two$",
          "spec": Object {
            "key": SliceKey {
              "key": "two$",
              "name": "two",
            },
            "state": Object {
              "apply": [Function],
              "init": [Function],
            },
          },
        },
      },
    },
    "slicesCurrentState": Object {
      "one$": 1,
      "two$": 2,
    },
  },
  "dispatch": [Function],
  "errorHandler": [Function],
  "storeName": "test-store",
}
`;

exports[`store deferred side effects does not call deferred update when scheduler is not provided 1`] = `
Object {
  "_actionSerializers": Object {},
  "_currentRunId": 0,
  "_destroyController": Any<AbortController>,
  "_destroyed": false,
  "_disableSideEffects": false,
  "_dispatchAction": [Function],
  "_infiniteErrors": Object {
    "count": 0,
    "lastSeen": 0,
  },
  "_lastSeenStateCache": WeakMap {},
  "_onError": undefined,
  "_scheduler": [Function],
  "_sideEffects": Array [
    Object {
      "effect": Object {
        "deferredUpdate": [MockFunction],
      },
      "initialState": AppState {
        "config": AppStateConfig {
          "fields": Array [],
          "opts": undefined,
          "slices": Array [
            Slice {
              "key": "slice$2",
              "spec": Object {
                "sideEffect": [MockFunction] {
                  "calls": Array [
                    Array [
                      [Circular],
                      undefined,
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": Object {
                        "deferredUpdate": [MockFunction],
                      },
                    },
                  ],
                },
              },
            },
          ],
          "slicesByKey": Object {
            "slice$2": Slice {
              "key": "slice$2",
              "spec": Object {
                "sideEffect": [MockFunction] {
                  "calls": Array [
                    Array [
                      [Circular],
                      undefined,
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": Object {
                        "deferredUpdate": [MockFunction],
                      },
                    },
                  ],
                },
              },
            },
          },
        },
        "slicesCurrentState": Object {},
      },
      "key": "slice$2",
    },
  ],
  "_state": AppState {
    "config": AppStateConfig {
      "fields": Array [],
      "opts": undefined,
      "slices": Array [
        Slice {
          "key": "slice$2",
          "spec": Object {
            "sideEffect": [MockFunction] {
              "calls": Array [
                Array [
                  [Circular],
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Object {
                    "deferredUpdate": [MockFunction],
                  },
                },
              ],
            },
          },
        },
      ],
      "slicesByKey": Object {
        "slice$2": Slice {
          "key": "slice$2",
          "spec": Object {
            "sideEffect": [MockFunction] {
              "calls": Array [
                Array [
                  [Circular],
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Object {
                    "deferredUpdate": [MockFunction],
                  },
                },
              ],
            },
          },
        },
      },
    },
    "slicesCurrentState": Object {},
  },
  "dispatch": [Function],
  "errorHandler": [Function],
  "storeName": "test-store",
}
`;

exports[`store empty store 1`] = `
Object {
  "_actionSerializers": Object {},
  "_currentRunId": 0,
  "_destroyController": Any<AbortController>,
  "_destroyed": false,
  "_disableSideEffects": false,
  "_dispatchAction": [Function],
  "_infiniteErrors": Object {
    "count": 0,
    "lastSeen": 0,
  },
  "_lastSeenStateCache": WeakMap {},
  "_onError": undefined,
  "_scheduler": undefined,
  "_sideEffects": Array [],
  "_state": AppState {
    "config": AppStateConfig {
      "fields": Array [],
      "opts": undefined,
      "slices": Array [],
      "slicesByKey": Object {},
    },
    "slicesCurrentState": Object {},
  },
  "dispatch": [Function],
  "errorHandler": [Function],
  "storeName": "test-store",
}
`;
